@@ -488,3 +488,4 @@ Code:
 * Fixed customorbit.cpp to compile on HP/UX
 * Fixed appearance of galaxies when viewed from inside an atmosphere
 * Removed duplicate entry for Iota Horologii (HR 810) in exoplanet catalog
+* Unix Gtk: removed problem preventing ShowClouds from working. (dramsey)
